@@ -8,6 +8,8 @@ Adjust colours for accessibility
 Display information text for new graphs
 Minor css changes
 Add padding for when result values are long text
+Update tag section to include code number
+Capitalise narrative for result title and description
 
 
 Development Portal (2020-03-08 shi)
